局部样式优化

--- a/WpfBaseLesson/StyleWindow.xaml
+++ b/WpfBaseLesson/StyleWindow.xaml
@@ -6,7 +6,51 @@
         xmlns:local="clr-namespace:WpfBaseLesson"
         mc:Ignorable="d"
         Title="StyleWindow" Height="450" Width="800">
+    <!--将样式封装成资源-->
+    <!--基样式-->
+    <Window.Resources>
+        <Style TargetType="Button" x:Key="buttonstyle">
+            <Setter Property="Height"
+                    Value="40"></Setter>
+            <Setter Property="Width"
+                    Value="50"></Setter>
+            <Setter Property="FontSize"
+                    Value="20"></Setter>
+            <Setter Property="HorizontalAlignment"
+                    Value="Center"></Setter>
+            <Setter Property="VerticalAlignment"
+                    Value="Center"></Setter>
+
+        </Style>
+        <!--注册样式-->
+        <Style TargetType="Button"
+               x:Key="RegButtonStyle"
+               BasedOn="{StaticResource buttonstyle}">
+            <Setter Property="Background"
+                    Value="Green"></Setter>
+        </Style>
+        <!--登录样式-->
+        <Style TargetType="Button"
+               x:Key="LoginButtonStyle"
+               BasedOn="{StaticResource buttonstyle}">
+            <Setter Property="Background"
+                    Value="Red"></Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition  Height="50"/>
+        </Grid.RowDefinitions>
+        <Button Content="注册" Style="{StaticResource RegButtonStyle}"></Button>
+        <Button Content="登录"
+                Grid.Row="1"
+                FontSize="20" Style="{StaticResource LoginButtonStyle}"></Button>
+        <Button Content="其他"
+                Height="40"
+                Width="50"
+                Grid.Row="2"
+                FontSize="20"></Button>
     </Grid>
 </Window>
