--- a/WpfBaseLesson/App.xaml
+++ b/WpfBaseLesson/App.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfBaseLesson"
-             StartupUri="MainWindow.xaml"> <!--配置主窗体-->
+             StartupUri="StyleWindow.xaml"> <!--配置主窗体-->
     <Application.Resources>
          <!--配置 启动项 资源-->
+        <ResourceDictionary Source="Dictionary/ButtonStyleDic.xaml"></ResourceDictionary>
     </Application.Resources>
 </Application>
