--- a/OAManage/OAManage/MainWindow.xaml
+++ b/OAManage/OAManage/MainWindow.xaml
@@ -59,7 +59,7 @@
                     <Button Grid.Row="2"
                             Grid.ColumnSpan="2"
                             FontSize="20"
-                            Background="LightBlue" Click="Btn_Login">登录</Button>
+                            Background="LightBlue" Command="{Binding Command}">登录</Button>
 
                 </Grid>
             </Border>
