--- a/OAManage/OAManage/MainWindow.xaml
+++ b/OAManage/OAManage/MainWindow.xaml
@@ -44,7 +44,7 @@
 
                     <!--第一行的第二列-->
                     <TextBox Grid.Column="1"
-                             Margin="0,4" Text="{Binding AccountModel.Account}"></TextBox>
+                             Margin="0,4" Text="{Binding Account}"></TextBox>
 
                     <!--第二行的第一列-->
                     <TextBlock Text="密码"
@@ -54,7 +54,7 @@
                     <!--第二行的第二列-->
                     <TextBox Grid.Row="1"
                              Grid.Column="2"
-                             Margin="0,4" Text="{Binding  AccountModel.Pwd}"></TextBox>
+                             Margin="0,4" Text="{Binding  Pwd}"></TextBox>
                     <!--绑定命令-->
                     <Button Grid.Row="2"
                             Grid.ColumnSpan="2"
