--- a/OAManage/OAManage/MainWindow.xaml
+++ b/OAManage/OAManage/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OAManage"
+        xmlns:pwdns="clr-namespace:OAManage.Base"
         mc:Ignorable="d"
         Title="在线办公管理系统" Height="450" Width="800">
     <Grid>
@@ -52,9 +53,15 @@
                                Margin="0,4"></TextBlock>
 
                     <!--第二行的第二列-->
-                    <TextBox Grid.Row="1"
+                    <!--<TextBox Grid.Row="1"
                              Grid.Column="2"
-                             Margin="0,4" Text="{Binding  Pwd}"></TextBox>
+                             Margin="0,4" Text="{Binding  Pwd}"></TextBox>-->
+                    <PasswordBox Grid.Row="1"
+                             Grid.Column="2"
+                             Margin="0,4"
+                             pwdns:PasswordBoxExtend.MyPwd="{Binding Pwd,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
+                             pwdns:PasswordBoxExtend.IsBind="True"
+                                 ></PasswordBox>
                     <!--绑定命令-->
                     <Button Grid.Row="2"
                             Grid.ColumnSpan="2"
